2011-04-07 lucas
* Added Embedded File as allowed content type of Business Configuration

2011-04-07 lucas
* Update XML format of PortalTypeTemplateItem.

2011-04-01 lucas
* Renamed currency_list.ods to standard_currency_list.ods

2011-03-30 lucas
* Anonymous can not view the Configurator Tool.

2010-01-03 lucas
* Moved the extension ConfigurationTemplate_readOOoCalcFile to this bt5.

2010-01-01 lucas
* Added proxy field in all forms, using base configurator field library.

2010-12-06 Rafael
* Initial Release