@@ -53,7 +53,7 @@
         </item>
         <item>
             <key> <string>enctype</string> </key>
-            <value> <string></string> </value>
+            <value> <string>multipart/form-data</string> </value>
         </item>
         <item>
             <key> <string>group_list</string> </key>
@@ -103,6 +103,8 @@
                         <string>my_configuration_state</string>
                         <string>my_translated_simulation_state_title</string>
                         <string>my_translated_validation_state_title</string>
+                        <string>my_default_image_absolute_url</string>
+                        <string>my_default_image_file</string>
                       </list>
                     </value>
                 </item>
